# visual_waypoint_nav

./: CMakeLists.txt  README.md  detect_and_track.cpp  detect_and_track.hpp  main.cpp  prefilter.cpp  prefilter.hpp  utils.cpp  utils.hpp
DEV_SPACE/: CMakeLists.txt  Stitching.cpp  blob_tracking.cpp  kalman_visual_odometry.cpp  pre_filter.cpp  runway_detection.cpp  sift_matcher.cpp  sift_waypoint.cpp  visual_odometry.cpp  visual_odometry_waypoint.cpp
NAV_SPACE/: CMakeLists.txt  drone_controller.cpp  drone_controller.hpp  file_parser.cpp  file_parser.hpp  main.cpp
